fix(iconButton): remove z-index

--- a/components/elements/IconButton.scss
+++ b/components/elements/IconButton.scss
@@ -22,6 +22,6 @@
   }
 
   &[disabled] {
-    z-index: -1;
+    pointer-events: none;
   }
 }
